<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">西邮图书馆</string>
    <string name="tip_text">提  示</string>
    <string name="confirm_text">确认</string>
    <string name="cancle_text">取消</string>
    <!-- 登录 -->
    <string name="login_title">西邮图书馆登录</string>
    <string name="username">账 户</string>
    <string name="password">密 码</string>
    <string name="auto_login">自动登录</string>
    <string name="save_password">记住密码</string>
    <string name="login_text">登  录</string>
    <!-- 用户 -->
    <string name="numb_text">学  号</string>
    <string name="class_text">班  级</string>
    <!-- MainActivity -->
    <string name="main_title">西邮图书馆</string>
    <string name="my_text">我的</string>
    <string name="home_text">首页</string>
    <string name="setting_text">设置</string>
    <!-- 我的 -->
    <string name="my_borrow_text">我的借阅</string>
    <string name="my_collection_text">我的收藏</string>
    <string name="my_foot_text">我的足迹</string>
    <string name="ranklist_text">排行榜</string>
    <string name="right_arrow_text">></string>
    <!-- 设置 -->
    <string name="setting_message_notic_text">消息通知</string>
    <string name="setting_net_type_text">2G/3G/4G网络下显示图片</string>
    <string name="setting_about_text">关于我们</string>
    <string name="setting_exit_text">退出</string>
    <!-- 加载 -->
    <string name="loading_text">loading</string>
    <string name="load_faluire_text">啊哦!加载失败了,点击重新加载</string>
    <string name="load_no_data_text">亲！您没有收藏任何书籍哦~</string>
    <!-- 图书详情 -->
    <string name="share_text">分享</string>
    <string name="collection_text">收藏</string>
    <string name="one_numb_text">1</string>
    <string name="one_text">基本资料</string>
    <string name="one_pub_text">出版社：</string>
    <string name="one_subject_text">主题分类：</string>
    <string name="one_total_text">藏书数量：</string>
    <string name="one_borrow_text">浏览次数：</string>
    <string name="one_fav_text">收藏次数：</string>
    <string name="one_rent_text">借阅次数：</string>
    <string name="one_can_borrow_text">可借数量：</string>
    <string name="one_pages_text">页数：</string>
    <string name="one_author_text">作者：</string>
    <string name="one_id_text">索书号：</string>
    <string name="two_numb_text">2</string>
    <string name="two_text">流通情况</string>
    <string name="two_info_text">图书流通情况如下：</string>
    <string name="two_total_text">共有图书：</string>
    <string name="two_can_borrow_text">可借数量：</string>
    <string name="three_numb_text">3</string>
    <string name="three_text">图书摘要</string>
    <string name="three_author_text">作者简介:</string>
    <string name="three_book_text">图书简介:</string>
    <string name="four_numb_text">4</string>
    <string name="four_text">相关推荐</string>
    <string name="no_book_detial">暂无该书简介</string>
    <string name="date_text">应还日期：</string>
    <string name="department_text">所在书库：</string>
    <string name="status_text">状态：</string>
    <string name="barcode_text">条形码：</string>
    <string name="id_refer_text">控制号：</string>
    <!-- 排行榜 -->
    <string name="sort_type_text">排序方式：</string>
    <string name="borrow_rank_text">借阅排行</string>
    <string name="collection_rank_text">收藏排行</string>
    <string name="look_rank_text">查看排行</string>
    <!-- 我的节借阅 -->
    <string name="bt_status_text">我要续借</string>
    <string name="tv_status_text">本馆续借</string>
    <string name="data_myborrow_text">到期时间：</string>
    <!-- 常见问题 -->
    <string name="question1_text">1.登录时的学号和密码都指的是什么？</string>
    <string name="answer1_text">\t学号一般为:s+自己的学号,初始密码为123456</string>
    <string name="question2_text">2.学号和用户名安全吗？</string>
    <string name="answer2_text">\t为了提高查询速度和缓解服务器压力，我们只对一些图书信息进行了缓存。请放心使用</string>
    <!-- 问题反馈 -->
    <string name="bt_send_text">发送</string>
    <string name="advice_text">\t\t请留下您的宝贵意见我们将不断完善,谢谢。</string>
    <!-- 我的历史 -->
	<string name="foot_type">操作类型:</string>
	<string name="foot_date">操作日期:</string>
	<!-- 首页 -->
	<string name="notices">公告</string>
	<string name="news">新闻</string>
	<string name="point">·</string>
	<string name="published">发布单位:</string>
	<string name="publish_date">发布时间:</string>
	<!-- 关于 -->
	<string name="about_update">版本更新</string>
    <string name="setting_question_text">常见问题</string>
    <string name="setting_back_advice_text">问题反馈</string>
    <string name="mobile_text">应用开发：西邮移动应用开发实验室</string>
    <string name="content_text">联系：tianzhao@xiyoumobile.com</string>
	<!-- 修改密码 -->
    <string name="modify_pwd_text">确认修改</string>
    <string name="modify_old_pwd_text">原密码</string>
    <string name="modify_new_pwd_text">新密码</string>
    <string name="modify_repass_pwd_text">确认新密码</string>
    <!-- 搜索 -->
    <string name="input_book_name">请输入书名</string>
    <string name="btsearch">搜索</string>
    <string name="no_data_text">空空如也~</string>
</resources>