<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <include
        android:id="@+id/actionbar_activity_question"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/actionbar_activity_question"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_back"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_text"
                android:textColor="#393838"
                android:textSize="@dimen/samle_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/answer1_text"
                android:textColor="#393838"
                android:textSize="@dimen/samle_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/question_back"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_text"
                android:textColor="#393838"
                android:textSize="@dimen/samle_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/answer2_text"
                android:textColor="#393838"
                android:textSize="@dimen/samle_text_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>