<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <include
        android:id="@+id/actionbar_activity_modify_pwd"
        layout="@layout/actionbar" />

    <RelativeLayout
        android:id="@+id/rl_activity_modify_pwd_body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/actionbar_activity_modify_pwd"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/ll_input_activity_modify_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/et_back"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username_activity_modify_pwd"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:background="@null"
                android:clickable="false"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:paddingLeft="13dp"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/dark_grey"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/et_old_password_activity_modify_pwd"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/modify_old_pwd_text"
                android:inputType="textPassword"
                android:paddingLeft="13dp"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/dark_grey"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/et_new_password_activity_modify_pwd"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/modify_new_pwd_text"
                android:inputType="textPassword"
                android:paddingLeft="13dp"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/dark_grey"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/et_repass_password_activity_modify_pwd"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/modify_repass_pwd_text"
                android:inputType="textPassword"
                android:paddingLeft="13dp"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_modify_pwd_activity_modify_pwd"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/ll_input_activity_modify_pwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/bt_radius_selector"
            android:text="@string/modify_pwd_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

</RelativeLayout>