<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <TextView
        android:id="@+id/tv_alertdialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tip_text"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/progressbar_title_size" />

    <ImageView
        android:id="@+id/iv_alertdialog_line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_alertdialog_title"
        android:layout_marginTop="5dp"
        android:background="@color/theme_color"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_alertdialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/iv_alertdialog_line1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="删除该收藏?"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/mycollection_book_title" />

    <ImageView
        android:id="@+id/iv_alertdialog_line2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_alertdialog_msg"
        android:layout_marginTop="5dp"
        android:background="@color/theme_color"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/iv_alertdialog_line2"
        android:orientation="horizontal"
        android:background="@color/theme_color"
        android:weightSum="2" >

        <Button
            android:id="@+id/bt_alertdialog_confirm"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/confirm_text"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/mycollection_book_title" />

        <Button
            android:id="@+id/bt_alertdialog_cancle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_marginLeft="0.5dp"
            android:text="@string/cancle_text"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/mycollection_book_title" />
    </LinearLayout>

</RelativeLayout>