<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/circulation_radio_back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />

        <TextView
            android:id="@+id/tv_barcode_item_circulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />

        <TextView
            android:id="@+id/tv_state_item_circulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />

        <TextView
            android:id="@+id/tv_department_item_circulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date_item_circulation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />

        <TextView
            android:id="@+id/tv_date_item_circulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/book_info_title_size" />
    </LinearLayout>

</LinearLayout>